@@ -8,10 +8,10 @@
 # to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 # copies of the Software, and to permit persons to whom the Software is
 # furnished to do so, subject to the following conditions:
-# 
+#
 # The above copyright notice and this permission notice shall be included in
 # all copies or substantial portions of the Software.
-# 
+#
 # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 # IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 # FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -26,16 +26,16 @@ require 'rufus/scheduler'
 
 
 #
-# An 'alias' to Rufus::Scheduler to keep backward compatibility for 
+# An 'alias' to Rufus::Scheduler to keep backward compatibility for
 # the users of the gem 'openwferu-scheduler'.
 #
 module OpenWFE
 
-    class Scheduler < Rufus::Scheduler
-    end
+  class Scheduler < Rufus::Scheduler
+  end
 
-    module Schedulable 
-        include Rufus::Schedulable
-    end
+  module Schedulable
+    include Rufus::Schedulable
+  end
 end
 
